--- a/1/index.html
+++ b/1/index.html
@@ -7,10 +7,13 @@
 	<meta name="description" content="Przed TObą spis moich ulubionych filmów, sprawdź czy znasz je wszystkie. Uczta dla kinomaniaka!" />
 	<meta name="keywords" content="film, kino, najlepsze filmy, top filmy" />
 	<meta http-equiv="X-UA-Compatibile" content="IE=edge,chrome=1" />
+	<link rel="stylesheet" href="style.css" type="text/css">
  </head>
 
+ <style>h1 {color: blue;}</style>
+
 <body>
-	<h1>Najlepsze filmy!</h1>
+	<h1 style="color: green;">Najlepsze filmy!</h1>
 	
 	Komedia: 
 	<a href="https://www.filmweb.pl/Forrest.Gump" target="_blank" title="Zobacz na Filmwebie!"> 
