creating css template

--- a/2/index.html
+++ b/2/index.html
@@ -28,19 +28,30 @@
 		</div>
 
 		<div id="topbar">
+			<div id="topbarL">
+				<img src="linux.png"/>
+			</div>
+			<div id="topbarR">
+			<span class="bigtitle">O projekcie słów kilka</span>
+			<div style="height: 15px;"></div>
+
 			Kiedy mówisz: "Napisałem program, który wywalił Windows, ludzie gapią się na Ciebie głupkowato i mówią: Hej, ja dostałem to wraz z systemem, za darmo" - Linus Torvalds, twórca Linuxa :) Zapraszamy do zapoznania się z witryną, dzięki której dowiesz się co to jest Linux i wybierzesz dystrybucję dla siebie!
+			</div>
+			<div style="clear: both;"></div>
 		</div>
 
 		<div id="sidebar">
-			Strona główna<br/>
-			Dystrybucje<br/>
-			Instalacje<br/>
-			Polecenia<br/>
-			Linus Torvalds<br/>
-			O projekcie
+			<div class="optionL">Strona główna</div>
+			<div class="optionL">Dystrybucje</div> 
+			<div class="optionL">Instalacje </div> 
+			<div class="optionL">Polecenia</div> 
+			<div class="optionL">Linus Torvalds</div> 
+			<div class="optionL">O projekcie</div>
 		</div>
 
-		<div id="content">Dlaczego Linux?<br/>
+		<div id="content">
+			<span class="bigtitle">Dlaczego Linux?</span>
+			<div class="dottedline"></div>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lacinia mollis odio eu bibendum. Praesent non hendrerit risus. Nulla id semper sem. Mauris risus mauris, ultrices sed ullamcorper sed, vulputate vel nisi. Aliquam augue ante, mattis in pulvinar vitae, ultrices nec leo. Nulla ultricies augue enim, sit amet semper tellus vulputate sit amet. Maecenas tincidunt, ex eu viverra scelerisque, quam lectus auctor nunc, at pretium nibh lacus in ligula. Cras condimentum felis ac aliquet tristique. Sed elementum eu nulla vel rutrum. Cras feugiat nulla non congue malesuada.
 				
 			<br /><br />
